# imgui_sdl2

./: CMakeLists.txt  LICENSE  README.md
example/: main.cpp
include/: imconfig-glfw.h  imconfig-sdl2.h  imgui-glfw.h  imgui-glfw_export.h  imgui-sdl2.h  imgui-sdl2_export.h
src/: TextEditor.cpp  imgui_glfw.cpp  imgui_sdl2.cpp
